# sertifika

./: CMakeLists.txt  TODO_LIST.txt  certDefines.h  certcreator.cpp  certcreator.h  certextension.cpp  certextension.h  certkey.cpp  certkey.h  main.cpp  sertifika.kdev4  subjectdn.cpp  subjectdn.h
.kdev4/: sertifika.kdev4
